completed frontend mentor challege

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "src/index.js",
     "scripts": {
-        "serve": "webpack --mode development --watch",
+        "dev": "webpack --mode development --watch",
         "build": "webpack --mode production"
     },
     "keywords": [],
